--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-Package      Version   
------------- ----------
-certifi      2019.11.28
-chardet      3.0.4     
-Click        7.0       
-Flask        1.1.1     
-idna         2.9       
-itsdangerous 1.1.0     
-Jinja2       2.11.1    
-MarkupSafe   1.1.1     
-pip          20.0.2    
-requests     2.23.0    
-setuptools   45.2.0    
-urllib3      1.25.8    
-Werkzeug     1.0.0     
-wheel        0.34.2    
+Package       Version   
+------------- ----------
+certifi       2019.11.28
+chardet       3.0.4     
+Click         7.0       
+Flask         1.1.1     
+idna          2.9       
+itsdangerous  1.1.0     
+Jinja2        2.11.1    
+MarkupSafe    1.1.1     
+numpy         1.18.1    
+opencv-python 4.2.0.32  
+pip           20.0.2    
+requests      2.23.0    
+setuptools    45.2.0    
+urllib3       1.25.8    
+Werkzeug      1.0.0     
+wheel         0.34.2    
