--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
+absl-py==0.9.0
+astor==0.8.1
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+gast==0.3.3
+grpcio==1.27.2
+h5py==2.10.0
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.0
+Markdown==3.2.1
 MarkupSafe==1.1.1
+mock==4.0.2
 numpy==1.18.1
 opencv-python==4.2.0.32
+protobuf==3.11.3
 requests==2.23.0
+six==1.14.0
+tensorboard==1.13.1
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
 urllib3==1.25.8
 Werkzeug==1.0.0
